Heroku-enabled version